crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_import_with_alias_off.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I002 [*] Missing required import: `from __future__ import annotations as _annotations`
--> off.py:1:1
help: Insert required import: `from __future__ import annotations as _annotations`
  |
1 | # isort: off
2 |
3 + from __future__ import annotations as _annotations
4 | x = 1
5 | # isort: on
  |
