crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_import_with_future_import_docstring_future_import.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I002 [*] Missing required import: `import this`
--> docstring_future_import.py:1:1
help: Insert required import: `import this`
  |
1 | "a docstring"
2 | from __future__ import annotations
3 + import this
4 | # EOF
  |
