crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_importfrom_with_useless_alias_this_this_from.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
PLC0414 Required import does not rename original package.
 --> this_this_from.py:1:20
  |
1 | from module import this as this
  |                    ^^^^^^^^^^^^
help: Change required import or disable rule.
