crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_imports_docstring.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I002 [*] Missing required import: `from __future__ import generator_stop`
--> docstring.py:1:1
help: Insert required import: `from __future__ import generator_stop`
  |
1 | """Hello, world!"""
2 + from __future__ import generator_stop
3 + 
4 | x = 1
  |

I002 [*] Missing required import: `from __future__ import annotations`
--> docstring.py:1:1
help: Insert required import: `from __future__ import annotations`
  |
1 | """Hello, world!"""
2 + from __future__ import annotations
3 + 
4 | x = 1
  |
