crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__section_order_sections.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> sections.py:1:1
  |
1 | / from __future__ import annotations
2 | | import os
3 | | import sys
4 | | import pytz
5 | | import django.settings
6 | | from library import foo
7 | | from . import local
  | |___________________^
help: Organize imports
   |
 1 + from __future__ import annotations
 2 + 
 3 + import os
 4 + import sys
 5 + 
 6 + import pytz
 7 + 
 8 + import django.settings
 9 + 
10 + from library import foo
11 + 
12 + from . import local
   |
