crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__sections_main_first_party.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> main_first_party.py:1:1
  |
1 | / import os
2 | |
3 | | import __main__
4 | | import third_party
5 | |
6 | | import first_party
  | |__________________^
7 |
8 |   os.a
  |
help: Organize imports
  |
1 + import os
2 + 
3 + import third_party
4 + 
5 + import __main__
6 + import first_party
  |
