crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__separate_first_party_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> separate_first_party_imports.py:1:1
  |
1 | / import sys
2 | | import leading_prefix
3 | | import numpy as np
4 | | import os
5 | | from leading_prefix import Class
  | |________________________________^
help: Organize imports
  |
1 + import os
2 + import sys
3 + 
4 + import numpy as np
5 + 
6 + import leading_prefix
7 + from leading_prefix import Class
  |
